k8s/gqlgen-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gqlgen-api
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gqlgen-api
  template:
    metadata:
      labels:
        app: gqlgen-api
    spec:
      containers:
        - name: gqlgen-api
          image: gqlgen-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
