k8s/gqlgen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gqlgen-service
  namespace: dev
  annotations:
    endpointslice.kubernetes.io/skip-mirror: "true"
spec:
  selector:
    app: gqlgen-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
