k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dev
spec:
  ports:
    - port: 5432
  clusterIP: None  # ← Headless Service にするため
  selector:
    app: postgres
