k8s/gqlgen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gqlgen-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: sm-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gqlgen-service
                port:
                  number: 8080
